// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`set_tempo (Snapshot) writes a tempo change to the first staff only 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Part id="2">
      <Staff id="2">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        <defaultConcertClef>F8vb</defaultConcertClef>
        <defaultTransposingClef>F</defaultTransposingClef>
        </Staff>
      <trackName>Electric Bass</trackName>
      <Instrument id="electric-bass">
        <longName>Electric Bass</longName>
        <shortName>El. B.</shortName>
        <trackName>Electric Bass</trackName>
        <minPitchP>28</minPitchP>
        <maxPitchP>67</maxPitchP>
        <minPitchA>28</minPitchA>
        <maxPitchA>65</maxPitchA>
        <transposeDiatonic>-7</transposeDiatonic>
        <transposeChromatic>-12</transposeChromatic>
        <instrumentId>pluck.bass.electric</instrumentId>
        <concertClef>F8vb</concertClef>
        <transposingClef>F</transposingClef>
        <Channel>
          <program value="33"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><Tempo><tempo>1.333333</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 80</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    <Staff id="2">
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;

exports[`set_tempo (Snapshot) replaces an existing Tempo at the same bar instead of duplicating 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig><concertKey>-3</concertKey></KeySig>
          <TimeSig><sigN>4</sigN><sigD>4</sigD></TimeSig>
          <Tempo><tempo>2.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 160</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice><Tempo><tempo>1.666667</tempo><followText>1</followText><text><sym>metNoteQuarterUp</sym> = 100</text></Tempo>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>
"
`;
